reshow overflow to fix #6459

--- a/app/styles/ui/changes/_commit-message.scss
+++ b/app/styles/ui/changes/_commit-message.scss
@@ -76,9 +76,6 @@
     // Fake that we're a text-box
     cursor: text;
 
-    // Hide overflowed content
-    overflow: hidden;
-
     &.focus-within {
       outline: none;
       border-color: var(--focus-color);
